@@ -109,15 +109,7 @@ USB_Descriptor_Configuration_t PROGMEM ConfigurationDescriptor =
 			
 			.Data                   = {0x01, 0x10}
 		},
-		
-	.CDC_Functional_CallManagement= 
-		{
-			.Header                 = {.Size = sizeof(CDC_FUNCTIONAL_DESCRIPTOR(2)), .Type = 0x24},
-			.SubType                = 0x01,
-			
-			.Data                   = {0x00, 0x00}
-		},
-		
+
 	.CDC_Functional_AbstractControlManagement = 
 		{
 			.Header                 = {.Size = sizeof(CDC_FUNCTIONAL_DESCRIPTOR(1)), .Type = 0x24},
